# DesignPatterns

./: .gitignore  README.md
CommandPattern/: CMakeLists.txt
CommandPattern/RemoteControl/: CMakeLists.txt
CommandPattern/RemoteControl/include/: Command.hpp  GarageDoor.hpp  GarageDoorCommands.hpp  Light.hpp  LightCommands.hpp  RemoteControl.hpp  SimpleRemoteControl.hpp
CommandPattern/RemoteControl/src/: GarageDoor.cpp  GarageDoorCommands.cpp  Light.cpp  LightCommands.cpp  RemoteControl.cpp  SimpleRemoteControl.cpp  main.cpp
DecoratorPattern/Starbuzz/Starbuzz/: CMakeLists.txt
DuckSimulator/: Duck.cpp  Duck.h  DuckSimulator.cpp  DuckSimulator.vcxproj  DuckSimulator.vcxproj.filters  FlyBehavior.cpp  FlyBehavior.h  FlyNoWay.cpp  FlyNoWay.h  FlyRocketPowered.cpp  FlyRocketPowered.h  FlyWithWings.cpp  FlyWithWings.h  MallarDuck.cpp  ModelDuck.cpp  ModelDuck.h  MuteQuack.cpp  MuteQuack.h  Quack.h  QuackBehavior.cpp  QuackBehavior.h  Squeak.h
DuckSimulator/DuckSimulator/: Duck.h  FlyBehavior.h  FlyNoWay.h  Quack.cpp  Squeak.cpp
FactoryPattern/AbstractFactoryPattern/: CMakeLists.txt
FactoryPattern/AbstractFactoryPattern/FactoryPizza/: CMakeLists.txt
ObserverPattern/WeatherStation_v2/: Readme.md
Starbuzz/Starbuzz/: CMakeLists.txt
StrategyPattern/: DuckSimulator.sln
StrategyPattern/DuckSimulator/: DuckSimulator.vcxproj.filters  FlyWithWings.h  MallarDuck.h  ModelDuck.cpp
WeatherStation/WeatherStation/: CMakeLists.txt
WeatherStation/WeatherStation_v1/: Readme.md
WeatherStation/WeatherStation_v2/: CMakeLists.txt
WeatherStation/include/: Observer.hpp
(+119 files in other folders)
